Load JavaScript and CSS files over HTTPS
GitHub serves their Pages sites via HTTPS by default.  Update the JS
and CSS references to point to the HTTPS files on AWS S3.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,13 +21,13 @@
   href="http://s3.amazonaws.com/hcpss.web.site/images/hcpss-2016-02-22.min.css" >
 -->
 <link rel="stylesheet" type='text/css'
-  href="http://s3.amazonaws.com/hcpss.web.site/images/normalize.css">
+  href="https://s3.amazonaws.com/hcpss.web.site/images/normalize.css">
 <link rel="stylesheet" type='text/css'
   href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css"
-  href="http://s3.amazonaws.com/hcpss.web.site/fonts/fira.css" >
+  href="https://s3.amazonaws.com/hcpss.web.site/fonts/fira.css" >
 <link rel="stylesheet" type="text/css"
-  href="http://s3.amazonaws.com/hcpss.web.site/images/hcpss-2016-07-08a.css" >
+  href="https://s3.amazonaws.com/hcpss.web.site/images/hcpss-2016-07-08a.css" >
 
 <link rel="stylesheet" type="text/css"
   href="{{ site.baseurl }}/table.css" >
