--- a/_layouts/academy.html
+++ b/_layouts/academy.html
@@ -33,19 +33,7 @@ layout: default
 <h2 style="width: 90%; padding-top: 0px; border-bottom: 1px solid rgba(51, 51, 51, 0.2); display: inline-block; font-size: 1.4em; margin-bottom: 0.58333em;"><i class="fa fa-exchange" aria-hidden="true" style="color: #7DC254;"></i></i> Related Academies</h2>
 <!-- <p><span style="font-weight: 500; font-size:18px;">{% for topics in page.topics %}{{ topics }}, {% endfor %}</span></p> -->
 
-<ul>
-  {% for academy in site.academies %}
-    {% for topic in academy.topics %}
-      {% for page-topic in page.topics %}
-        {% if academy.title == page.title %}
-          {% continue %} 
-        {% elsif topic == page-topic %}
-          <li><a href="{{ site.baseurl }}/academy/{{ academy.slug | xml_escape }}/">{{ academy.title }}</a></li>
-        {% endif %}
-      {% endfor %}
-    {% endfor %}
-  {% endfor %}
-</ul>
+{% include /related-academies/{{ page.slug }}.html %}
 
 </div>
 </div>
@@ -54,7 +42,7 @@ layout: default
 {% if page.electives %}
   <div class="thirds">
     {% include /electives/{{ page.slug }}.html %}
-  </div>  
+  </div>
 {% endif %}
 {% if page.prerequisites %}
   <div class="thirds">
@@ -65,7 +53,7 @@ layout: default
   <div class="thirds">
     <h2 style="width: 90%; padding-top: 0px; border-bottom: 1px solid rgba(51, 51, 51, 0.2); display: inline-block; font-size: 1.4em; margin-bottom: 0.58333em;"><i class="fa fa-certificate fa-2" style="color: #7DC254;"></i>  Certifications</h2>
     {% include /certifications/{{ page.slug }}.html %}
-  </div> 
+  </div>
 {% endif %}
 </div>
 
