Removed sidebar view, added scripts
Script tags are added to match what’s on main site. Moved closing div’s
to layout file

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,4 @@
-</div>
 
-{% if page.sidebar_view %}
-<div class="sidebar">
-<li id="advanced_menu-24" class="widget widget_advanced_menu">
-
-<ul id="menu-home-and-hospital-teaching" class="menu-side">
-  <li class="menu-item"><a href="/academies/">Career Academies</a></li>
-  <li class="menu-item"><a href="/acadmies/electives/">Elective Course Options</a></li>
-  <li class="menu-item"><a href="/academies/college-credit/">College Articulation Agreements</a></li>
-  <li class="menu-item"><a href="/academies/contact/">Contact Information</a></li>
-</ul>
-{% endif %}
-
-</li>
-</div>
-</div>
-</div>
 
 
 <div class="footer group">
@@ -38,9 +21,6 @@ Learn more about the email and text alerts included within your HCPSS News subsc
 </div>
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script src="http://s3.amazonaws.com/hcpss.web.site/images/jquery.searcher.min.js"></script>
-<script src="http://s3.amazonaws.com/hcpss.web.site/images/hcpss-2015-12-18.js"></script>
-
-</body>
-</html>
+<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.js?ver=4.7.5'></script>
+<script type='text/javascript' src='http://s3.amazonaws.com/hcpss.web.site/images/mega-menu.min.js?ver=4.7.5'></script>
+<script type='text/javascript' src='http://s3.amazonaws.com/hcpss.web.site/images/hcpss-2017-04-12.min.js?ver=4.7.5'></script>
