--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en-US">
+
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
@@ -26,8 +25,8 @@
   href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css"
   href="https://s3.amazonaws.com/hcpss.web.site/fonts/fira.css" >
-<link rel="stylesheet" type="text/css"
-  href="https://s3.amazonaws.com/hcpss.web.site/images/hcpss-2016-07-08a.css" >
+<link rel="stylesheet" type="text/css" href="http://s3.amazonaws.com/hcpss.web.site/images/hcpss-2017-05-10b.min.css">
+
 
 <link rel="stylesheet" type="text/css"
   href="{{ site.baseurl }}/table.css" >
