--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,44 @@
   <body>
 
     {% include header.html %}
+
+	<div class="container page group">
+	<main id="main-content" class="main group">
+
+	<nav class="secondary-nav">
+	<div class="secondary-nav__inner">
+	<input class="second-state" type="checkbox" name="second-nav-state" id="secondary-nav--toggle" autocomplete="off">
+	<h2><a href="">Career Academies</a></h2>
+	<label class="secondary-nav__inner--toggle-btn" tabindex="0" for="secondary-nav--toggle"><span class="secondary-nav__inner--hidden">Secondary Navigation</span></label>
+	  <ul class="secondary-nav__collapsable">
+	    <li><a href="{{ site.baseurl }}/academies/college-credit/">College Credit</a></li>
+	    <li><a href="{{ site.baseurl }}/academies/faq/">FAQ</a></li>
+	  </ul>
+	</div>
+	</nav>
+
+	<div class="contents hero-heading">
+	<h1>{{ page.title }}</h1>
+	</div>
+
+
+  <!-- <p class="tagline">Preparing Students for College and Careers</p> -->
+    {% if page.sidebar_view == null %}
+      <div style="width:100%" class="body-content">
+    {% elsif page.sidebar_view %}
+      <h1> {{ page.title }}</h1>
+      <div class="body-content">
+    {% endif %}
   
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
       </div>
     </div>
+
+	</div>
+	</main>
+	</div>    
 
     {% include footer.html %}
 
