Load CSS & JS over HTTPS

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,32 +4,18 @@
 <meta name="viewport" content="width=device-width">
 <title>{{ page.title }} - HCPSS</title>
 
-<link rel="canonical" href="http://www.hcpss.org/about-us/budgets/fy17/teaching-investment/" />
-<link rel='shortlink' href='http://www.hcpss.org/?p=16966' />
-<link rel="alternate" type="application/json+oembed" href="http://www.hcpss.org/wp-json/oembed/1.0/embed?url=http%3A%2F%2Fwww.hcpss.org%2Fabout-us%2Fbudgets%2Ffy17%2Fteaching-investment%2F" />
-<link rel="alternate" type="text/xml+oembed" href="http://www.hcpss.org/wp-json/oembed/1.0/embed?url=http%3A%2F%2Fwww.hcpss.org%2Fabout-us%2Fbudgets%2Ffy17%2Fteaching-investment%2F&#038;format=xml" />
 
-<!--
-<link rel="stylesheet" type='text/css'
-  href="http://s3.amazonaws.com/hcpss.web.site/images/normalize.css">
-<link rel="stylesheet" type="text/css"
-  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css"
-  href="http://s3.amazonaws.com/hcpss.web.site/fonts/fira.css" >
-<link rel="stylesheet" type="text/css"
-  href="http://s3.amazonaws.com/hcpss.web.site/images/hcpss-2016-02-22.min.css" >
--->
 <link rel="stylesheet" type='text/css'
   href="https://s3.amazonaws.com/hcpss.web.site/images/normalize.css">
 <link rel="stylesheet" type='text/css'
   href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css"
   href="https://s3.amazonaws.com/hcpss.web.site/fonts/fira.css" >
-<link rel="stylesheet" type="text/css" href="http://s3.amazonaws.com/hcpss.web.site/images/hcpss-2017-05-10b.min.css">
+<link rel="stylesheet" type="text/css" href="https://s3.amazonaws.com/hcpss.web.site/images/hcpss-2017-05-10b.min.css">
 
 
 <link rel="stylesheet" type="text/css"
-  href="{{ site.baseurl }}/table.css" >
+  href="https://www.hcpss.org/f/table.css" >
 
 
 </head>
