Add Inclusivity Statement to Footer
Add the Inclusivity Statement link to the footer. Additionally, add alternative text and some ARIA to the footer to improve accessibility.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,19 +4,19 @@
 <div class="footer group">
 <div class="footer-inner group">
 <div class="footer-directions">
-  <a target="_blank" href="https://www.google.com/maps/preview?hl=en&amp;q=10910+Clarksville+Pike,+Ellicott+City,+MD+21042"><img id="hcpss-gmaps-footer-icon" src="http://s3.amazonaws.com/hcpss.web.site/images/directions-maps.png" height="120" width="120" alt="" /></a>
+  <a target="_blank" href="https://www.google.com/maps/preview?hl=en&amp;q=10910+Clarksville+Pike,+Ellicott+City,+MD+21042"><img id="hcpss-gmaps-footer-icon" src="http://s3.amazonaws.com/hcpss.web.site/images/directions-maps.png" height="120" width="120" alt="Get directions to HCPSS Central Office on Google Maps" /></a>
   <address>
   <strong>Howard County Public School System</strong><br>
   10910 Clarksville Pike<br>
   Ellicott City, MD 21042<br>
   Main Phone: (410) 313-6600<br>
-  <a href="/employees/staff-directory/">Staff Directory</a> | <a href="/employment/#equal-opportunity">Equal Opportunity</a>
+  <a href="/employees/staff-directory/">Staff Directory</a> | <a href="/inclusivity/">Inclusivity Statement</a>
 </address>
 </div>
 <div class="footer-hcpssnews">
 <p><strong>Your HCPSS News Subscription</strong><br>
 Learn more about the email and text alerts included within your HCPSS News subscription.</p>
-<p> <span class="subscribe"><a href="/hcpss-news/"><i class="fa fa-bullhorn"></i>&nbsp;Learn more&nbsp;→</a></span></p>
+<p> <span class="subscribe"><a href="/hcpss-news/"><i class="fa fa-bullhorn" aria-hidden="true"></i>&nbsp;Learn more&nbsp;→</a></span></p>
 </div>
 </div>
 </div>
